--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,5 +93,4 @@ h1, h2, h3, h4, h5, h6, strong {
 .page {
 	box-sizing: border-box;
 	min-height: 100vh;
-	overflow-x: auto;
 }
